--- a/in-n-out-books/package.json
+++ b/in-n-out-books/package.json
@@ -25,5 +25,8 @@
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
   },
-  "keywords": []
+  "engines": {
+    "node":"20.9.0",
+    "npm":"10.1.0"
+  }
 }
